--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -12,7 +12,7 @@ jobs:
       - run: npm install
       - run: npm test
   Package:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     needs: 
       - Test
     steps:
